index.css
body {
    margin: 0;
    width: 100%;
    height: 100%;
    display: block;
    position: relative;
    overflow: hidden;
    background: black;
}


.mapcontainer {
    width: 100vw;
    height: 100vh;
    z-index: -5;
    background: #09101D;
    /* opacity: 0.1; */
    position: absolute;
}

/* MENU BUTTON */
.menu {
    position: absolute;
    display: flex;
    flex-wrap: wrap;
    /* flex-direction: row-reverse; */
    justify-content: center;
    z-index: 2;
    width: 100%;
    margin: 0;
    font-family: 'Enriqueta', serif;
    font-weight: 400;
    text-decoration: none;
}

.item {
    font-size: 30px;
    /* margin-top: 5px; */
    /* margin-right: 20px; */
    /* flex-grow: 1; */
    /* border-radius: 30px; */
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
    color: white;
    padding-top: 10px;
    height: 60px;
    width: 120px;
    text-decoration: none;
    position: relative;
    transition: background-color 0.3s ease-out;
    cursor: pointer;
    font-weight: 900;
    background-color: rgba(255, 255, 255, 0.3)
}

.itemHighlight {
    color: #37505c;
    background: rgba(255, 255, 255, 0.9);
}

.item:hover {
    background-color: rgba(255, 255, 255, 0.7)
}

.iteminitem {
    width: 120px;
    text-align: center;
    margin-top: 9px;
    text-align: center;
    vertical-align: center;
}


/* MENU ITSELF */
.about {
    position: absolute;
    width: 100%;
    height: 100vh;
    /* background: #2E434D; */
    background: #112330;
    color: white;
    font-family: 'Enriqueta', serif;
    /* right: ; */
    top: -102vh;
    /* padding: 50px; */
    padding-top: 0px;
    box-shadow: 0px 0px 15px 0px rgba(25, 25, 25, 0.75);
    z-index: 1000;
    margin-bottom: 100px;

}

.aboutInner {
    display: flex;
    flex-direction: column;
    /* height: 90%; */
    padding-left: 200px;
    padding-right: 200px;
    margin-top: 10px;
}

h1 {
    font-size: 80px;
    margin-top: 100px;
    margin-bottom: 30px;
}
h2 {
    font-size: 30px;
}

p {
    font-size: 24px;
    flex-grow: 5;
    margin-top: 0px;
}

.aboutLinks {
    bottom: 0px;
    width: 300px;
    width: 0 auto;
    margin-bottom: 30px;
}

.aboutLink {
    font-size: 40px;
    text-decoration: none;
    display: inline;
    position: relative;
    font-weight: 400;
    color: white;
}

.inlineLink {
    text-decoration: none;
    display: inline;
    position: relative;
    color: white;
}

.inlineLink>.linkeffect {
    bottom: 0;
}

.linkeffect {
    content: '';
    height: 5px;
    width: 100%;
    background-color: #98B6B1;
    transition: height 0.3s, opacity 0.3s;
    display: inline-block;
    position: absolute;
    bottom: 5px;
    opacity: 0.8;
    z-index: -1;
    margin-left: 2px;
    padding-left: 1px;
    padding-right: 1px;
    margin-left: -2px;
    margin-right: -2px;
}

.aboutLink:hover>.linkeffect {
    height: 75%;
}

.inlineLink:hover>.linkeffect {
    height: 95%;
}

.closeAbout {
    position: absolute;
    font-family: "Montserrat";
    font-size: 40px;
    margin-top: 30px;
    width: 60px;
    height: 60px;
    font-weight: 900;
    border-radius: 30px;
    transition: background-color 0.3s ease-out;
    cursor: pointer;
    margin-left: -15.5px;
}

.closeAbout:hover {
    background-color: rgba(255, 255, 255, 0.1)
}

.closeInner {
    margin-top: 5px;
    margin-left: 1.5px;
    text-align: center;
}

@media only screen and (max-width: 600px) {
    h1 {
        font-size: 40px;
        margin-top: 80px;
        margin-bottom: 0px;
    }

    
    p {
        font-size: 14px;
        flex-grow: 5;
        margin-top: 0px;
    }
    h2 {
        font-size: 20px;
        margin-top: -10px;
        margin-bottom: 0px;
    }
    .aboutInner {
        /* display: flex;
        flex-direction: column;
        height: 90%; */
        padding-left: 10px;
        padding-right: 10px;
        margin-top: -10px;
    }

}
@media only screen and (min-width: 600px) and (max-width: 900px) {
    h1 {
        font-size: 80px;
        margin-top: 80px;
        margin-bottom: 10px;
    }

    
    p {
        font-size: 16px;
        flex-grow: 5;
        margin-top: 0px;
    }
    h2 {
        margin-top: 0;
        margin-bottom: 10px;
    }
    .aboutInner {
        /* display: flex;
        flex-direction: column;
        height: 90%; */
        padding-left: 50px;
        padding-right: 50px;
        margin-top: 10px;
    }

}
@media only screen and (min-width: 900px) and (max-width: 1400px) {
    h1 {
        font-size: 80px;
        margin-top: 80px;
        margin-bottom: 10px;
    }

    
    p {
        font-size: 22px;
        flex-grow: 5;
        margin-top: 0px;
    }
    h2 {
        margin-top: 0;
        margin-bottom: 10px;
    }
    .aboutInner {
        /* display: flex;
        flex-direction: column;
        height: 90%; */
        padding-left: 50px;
        padding-right: 50px;
        margin-top: 10px;
    }

}

